# isodoo

./: .gitignore  .hadolint.yaml  .pre-commit-config.yaml  10.0.Dockerfile  11.0.Dockerfile  12.0.Dockerfile  13.0.Dockerfile  14.0.Dockerfile  15.0.Dockerfile  16.0.Dockerfile  17.0.Dockerfile  18.0.Dockerfile  19.0.Dockerfile  6.0.Dockerfile  6.1.Dockerfile  7.0.Dockerfile  8.0.Dockerfile  9.0.Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml
.github/workflows/: docker_auto.yml  imageql-analysis.yaml  isodoo.yml  main.yml  test.yml
recipes/10.0/: constraints.txt
recipes/11.0/: constraints.txt
recipes/12.0/: constraints.txt
recipes/13.0/: constraints.txt
recipes/15.0/: overrides.txt
recipes/16.0/: constraints.txt  overrides.txt
recipes/18.0/: constraints.txt
recipes/19.0/: constraints.txt
recipes/6.0/: requirements.txt
recipes/6.1/: requirements.txt
recipes/7.0/: requirements.txt
recipes/8.0/: constraints.txt
recipes/9.0/: constraints.txt
tests/: conftest.py  test_isodoo.py
tests/data/project_demo/: Dockerfile  docker-compose.yaml
tests/data/project_demo/addons/git/: repos.yaml
tests/data/project_demo/v13.0/addons/: addons.yaml  repos.yaml
tests/data/project_demo/v14.0/addons/: addons.yaml
tests/data/project_demo/v18.0/addons/: addons.yaml
tools/: auto_fill_external_dependencies.py  auto_fill_repos.py  check_addons_dependencies.py  create_addons_symlinks.py  exec_env.sh  generate_config.py  isodoo_auto_fill_repos.py  isodoo_create_addons_symlinks.py  isodoo_update_addons.sh  wait_for_psql.py
(+5 files in other folders)
