[tool.poetry]
name = "isodoo"
version = "0.1.0"
description = ""
authors = ["Alexandre D. Díaz <dev@redneboa.es>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
python-on-whales = "^0.78.0"
pytest = "^8.4.2"
requests = "^2.32.5"
hadolint-bin = "^2.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
