[project]
name = "isodoo"
version = "0.1.0"
description = ""
authors = [{ name = "Alexandre D. Díaz", email = "dev@redneboa.es" }]
requires-python = ">=3.13,<4"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "python-on-whales>=0.78.0,<0.79",
    "pytest>=8.4.2,<9",
    "requests>=2.32.5,<3",
    "hadolint-bin>=2.12.0,<3",
]

[tool.uv]
package = false

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
